bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: ';' expected but '=' found.
  message:String=litMessage()
                ^